example/right-lyrics-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: right-lyrics
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: lyrics-page
spec:
  hosts:
    - "*"
  gateways:
    - right-lyrics
  http:
    - route:
        - destination:
            host: lyrics-page
            port:
              number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: songs-service
spec:
  host: songs-service
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: songs-service
spec:
  hosts:
    - songs-service
  http:
  - route:
    - destination:
        host: songs-service
        subset: v1
      weight: 90
    - destination:
        host: songs-service
        subset: v2
      weight: 10
